--- a/Code/EasyLease/src/main/webapp/admin/addAdvisorCSS.css
+++ b/Code/EasyLease/src/main/webapp/admin/addAdvisorCSS.css
@@ -9,8 +9,9 @@
     }
     input.advisorParameter {
         width: 70%;
-        background: #9b334e;
+        background: #9B334E;
         font-size: 3vw;
+        color: white;
     }
     input.advisorParameter:hover {
         background: #800000;
@@ -18,11 +19,13 @@
 
     label.advisorParameter{
         font-size: 3vw;
+        color: white;
     }
     .information{
         width: 100%;
         font-style: oblique;
         font-size: 2vw;
+        color: white;
     }
     #errore{
         width: 100%;
@@ -34,7 +37,7 @@
     table.characteristics{
         position: relative;
         alignment: center;
-        background: #9b334e;
+        background: #9B334E;
         margin-left: 15%;
         width: 70%;
         height: 40%;
@@ -44,23 +47,25 @@
         background: #800000;
     }
     #buttonAddAdvisor{
-        background: #9b334e;
+        background: #9B334E;
         position: relative;
         margin-left: 35%;
         margin-top: 20px;
         width: 30%;
         font-size: 2.5vw;
+        color: white;
         border-bottom:medium solid #dec717;
         border-radius: 20px;
     }
-    h2{
-        font-size: 3vw;
+    .detailTitle{
+        font-size: 5vw;
+        color: white;
     }
 }
 @media (max-width: 1024px) and (orientation: portrait) {
     hr{
-        position: absolute;
-        bottom: 25%;
+        margin-top: 15px;
+        position: relative;
         border: 1px solid #dec717;
         width: 70%;
         alignment: left;
@@ -68,34 +73,37 @@
     }
     input.advisorParameter {
         width: 70%;
-        background: #9b334e;
-        font-size: 4vw;
+        background: #9B334E;
+        font-size: 3vw;
+        color: white;
     }
     input.advisorParameter:hover {
         background: #800000;
     }
 
     label.advisorParameter{
-        font-size: 4vw;
+        font-size: 3vw;
+        color: white;
     }
     .information{
         width: 100%;
         font-style: oblique;
-        font-size: 3vw;
+        font-size: 2vw;
+        color: white;
     }
     #errore{
         width: 100%;
         font-style: oblique;
-        font-size: 3vw;
+        font-size: 2vw;
         color: #dec717;
     }
 
     table.characteristics{
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        background: #9b334e;
-        width: 90%;
+        position: relative;
+        alignment: center;
+        background: #9B334E;
+        margin-left: 15%;
+        width: 70%;
         height: 40%;
         border: medium solid #dec717;
     }
@@ -103,18 +111,25 @@
         background: #800000;
     }
     #buttonAddAdvisor{
-        background: #9b334e;
-        position: absolute;
-        right: 30%;
-        bottom: 27%;
-        width: 40%;
-        height: 6%;
-        font-size: 4vw;
+        background: #9B334E;
+        position: relative;
+        margin-left: 35%;
+        margin-top: 20px;
+        width: 30%;
+        font-size: 2.5vw;
+        color: white;
         border-bottom:medium solid #dec717;
         border-radius: 20px;
     }
-    h2{
-        font-size: 4vw;
+    .detailTitle{
+        font-size: 5vw;
+        color: white;
+    }
+    .footer{
+        position: absolute; !important;
+        bottom: 0%; !important;
+        width: 100%; !important;
+        height: 4em; !important;
     }
 }
 @media (min-width: 831px) and (orientation: landscape){
@@ -129,8 +144,9 @@
 
     input.advisorParameter {
         width: 90%;
-        background: #9b334e;
+        background: #9B334E;
         font-size: 1vw;
+        color: white;
     }
 
     input.advisorParameter:hover {
@@ -139,12 +155,14 @@
 
     label.advisorParameter {
         font-size: 1.2vw;
+        color: white;
     }
 
     .information {
         width: 100%;
         font-style: oblique;
         font-size: 0.9vw;
+        color: white;
     }
 
     #errore {
@@ -158,7 +176,7 @@
         position: absolute;
         top: 18%;
         right: 35%;
-        background: #9b334e;
+        background: #9B334E;
         width: 30%;
         height: 50%;
         border: medium solid #dec717;
@@ -169,16 +187,21 @@
     }
 
     #buttonAddAdvisor {
-        background: #9b334e;
+        background: #9B334E;
         position: absolute;
         right: 43%;
         bottom: 23.5%;
         width: 15%;
         height: 5.5%;
         font-size: 1.5vw;
+        color: white;
         border-bottom: medium solid #dec717;
         border-radius: 20px;
         padding-bottom: 10px;
+    }
+    .detailTitle{
+        font-size: 2vw;
+        color: white;
     }
     .footer{
         position: absolute; !important;
@@ -186,4 +209,13 @@
         width: 100%; !important;
         height: 4em; !important;
     }
+}
+#footer{
+    width: 100%;
+}
+#header{
+    width: 100%;
+}
+#container{
+    width: 100%;
 }
