--- a/Code/EasyLease/src/main/webapp/client/estimateManagementClientJSP.css
+++ b/Code/EasyLease/src/main/webapp/client/estimateManagementClientJSP.css
@@ -47,5 +47,6 @@
 .btn-primary.active, .btn-primary:active, .show>.btn-primary.dropdown-toggle{
     background-color: #9B334E !important;
     border-color: #9B334E !important;
+    color: white !important;
 
 }
