--- a/Code/EasyLease/src/main/webapp/client/historyClientJSP.css
+++ b/Code/EasyLease/src/main/webapp/client/historyClientJSP.css
@@ -31,5 +31,6 @@ th{
 .btn-primary.active, .btn-primary:active, .show>.btn-primary.dropdown-toggle{
     background-color: #9B334E !important;
     border-color: #9B334E !important;
+    color: white !important;
 
 }
