Compilazione System Test
Nell'attuale commit sono state effettuate le seguenti azioni:
-Compilazione di tutti i file necessari per effettuare i system test delle funzionalità di login (relative a User), stipulazione di un preventivo e convalida di un ordine (entrambi relativi ad Advisor);
-Modifica delle JSP historyAdvisor, orderManagement, orderValidation ed estimateStipulation per aggiungere gli id ai bottoni/link così da permettere al driver di riconoscerli e cliccarli senza incorrere in errori;
-Aggiunta della funzionalità di non convalida di un ordine da parte di un Advisor (modifica della JSP orderManagement e della Servlet orderValidation);
-Modifica dello unit test relativo alla validazione di un ordine così da testare il caso in cui un ordine venga non convalidato;
-Modifica errore logger errato su DBAdvisorDAO;
-Aggiunta della descrizione nelle JavaDoc delle servlet.

--- a/Code/EasyLease/src/main/webapp/advisor/orderManagementAdvisorJSP.css
+++ b/Code/EasyLease/src/main/webapp/advisor/orderManagementAdvisorJSP.css
@@ -52,6 +52,11 @@
     margin-top: 5% !important;
 }
 
+#link {
+    color: #f2f2f2 !important;
+    text-decoration: none !important;
+}
+
 .btn-check:active+.btn-primary, .btn-check:checked+.btn-primary,
 .btn-primary.active, .btn-primary:active, .show>.btn-primary.dropdown-toggle{
     background-color: #9B334E !important;
