--- a/Code/EasyLease/src/main/webapp/user/FAQ.css
+++ b/Code/EasyLease/src/main/webapp/user/FAQ.css
@@ -1,3 +1,93 @@
+@media (max-width: 830px) and (orientation: landscape)  {
+    .FAQcloud{
+        font-size: 1.5vw !important;
+        margin-right: 0 !important;
+    }
+
+    .imgIcon{
+        max-width: 40% !important;
+        max-height: 40% !important;
+    }
+    .FAQsubtitle{
+        font-size: 2.5vw !important;
+        margin-right: 22% !important;
+    }
+}
+@media (max-width: 1024px) and (orientation: portrait) {
+    .FAQh3{
+        font-size: 3vw !important;
+    }
+    .FAQtitle{
+        font-size: 5vw !important;
+    }
+    .FAQsubtitle{
+        font-size: 3vw !important;
+        margin-right: 20% !important;
+    }
+    .FAQcloud{
+        font-size: 2.5vw !important;
+        margin-right: 0 !important;
+    }
+
+    .imgIcon{
+        max-width: 50% !important;
+        max-height: 50% !important;
+    }
+    .FAQ p{
+        font-size: 2vw !important;
+    }
+
+    .FAQ button{
+        font-size: 2vw !important;
+    }
+    .buttondiv{
+        font-size: 3vw !important;
+    }
+    .TitleDiv{
+        margin-bottom: 45% !important;
+    }
+}
+@media (min-width: 830px) and (max-width: 1025px) and (orientation: portrait){
+    .TitleDiv{
+        margin-bottom: 65% !important;
+    }
+}
+@media (min-height: 767px) and (max-height: 770px) and (min-width: 1023px) and (max-width: 1025px) and (orientation: landscape){
+    .TitleDiv{
+        margin-bottom: 15% !important;
+    }
+    .FAQcloud{
+        font-size: 1.5vw !important;
+        margin-right: 0 !important;
+    }
+
+    .imgIcon{
+        max-width: 40% !important;
+        max-height: 40% !important;
+    }
+    .FAQsubtitle{
+        font-size: 2.5vw !important;
+        margin-right: 22% !important;
+    }
+}
+@media (min-height: 1023px) and (max-height: 1025px) and (min-width: 1364px) and (max-width: 1370px) and (orientation: landscape){
+    .TitleDiv{
+        margin-bottom: 25% !important;
+    }
+    .FAQcloud{
+        font-size: 1.5vw !important;
+        margin-right: 0 !important;
+    }
+
+    .imgIcon{
+        max-width: 40% !important;
+        max-height: 40% !important;
+    }
+    .FAQsubtitle{
+        font-size: 2.5vw !important;
+        margin-right: 22% !important;
+    }
+}
 .container{
     margin-left: 10%;
 }
@@ -8,13 +98,15 @@
     margin-bottom: 4%;
     border-radius: 3px;
     border-color: #9B334E;
+    z-index: 10;
 }
 .TitleDiv{
     display: flow-root;
     width: 100%;
-    margin-top: -5%;
-    text-align: center;
+    text-align: right;
     vert-align: bottom;
+    position: relative;
+    margin-top: -5%;
 }
 
 .FAQh3{
@@ -28,6 +120,7 @@
     font-size: 2vw;
     display: inline-block;
     vertical-align: bottom;
+    margin-right: 25%;
 }
 .FAQcloud{
     font-size: 0.8vw;
@@ -40,10 +133,12 @@
     border-radius: 15px;
     margin-left: -10%;
     margin-top: -2.5%;
+    margin-right: 10%;
 }
+
 .imgIcon{
-    width: 25%;
-    height: 25%;
+    max-width: 25%;
+    max-height: 25%;
     transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
     -moz-transform: scaleX(-1);
@@ -92,27 +187,11 @@
     border-bottom: medium solid #dec717;
     border-radius: 20px;
     padding-bottom: 5px;
+    position: relative;
+    left: 10%;
+    margin: 5px;
+    z-index: 10;
 }
 .buttondiv:hover{
     background: #800000;
-}
-#m1{
-    position: relative;
-    margin-top: 10px;
-    left: 25%;
-}
-#m2{
-    position: relative;
-    margin-top: -3.5%;
-    left: 42%;
-}
-#m3{
-    position: relative;
-    margin-top: -3.5%;
-    left: 50%;
-}
-#m4{
-    position: relative;
-    margin-top: -3.5%;
-    left: 60%;
 }
